--- a/Vowels/Base.lproj/LaunchScreen.storyboard
+++ b/Vowels/Base.lproj/LaunchScreen.storyboard
@@ -13,8 +13,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loadscreen.png" id="0qK-eO-L76">
-                                <rect key="frame" x="-135" y="-22" width="556" height="667"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loadsc.jpg" id="0qK-eO-L76">
+                                <rect key="frame" x="-40" y="-135" width="378" height="748"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -27,6 +27,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="loadscreen.png" width="1024" height="1024"/>
+        <image name="loadsc.jpg" width="1024" height="2000"/>
     </resources>
 </document>
