--- a/Vowels/Base.lproj/LaunchScreen.storyboard
+++ b/Vowels/Base.lproj/LaunchScreen.storyboard
@@ -13,7 +13,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appStartScreen.jpg" id="0qK-eO-L76">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FINALSTART.jpg" id="0qK-eO-L76">
                                 <rect key="frame" x="-38" y="-81" width="378" height="748"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -27,6 +27,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="appStartScreen.jpg" width="1024" height="2000"/>
+        <image name="FINALSTART.jpg" width="1024" height="2000"/>
     </resources>
 </document>
